baclup components and logic
