# openapi/code-auditor.yml
@@ -8,6 +8,26 @@ servers:
   - url: http://localhost:8080/
 
 paths:
+  /auth/token/email:
+    post:
+      tags:
+        - Authentication
+      summary: Get email from token
+      description: Retrieve email from token.
+      operationId: getEmailFromToken
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TokenEmailRequest'
+      responses:
+        '200':
+          description: User information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenEmailResponse'
   /api/adminUsers:
     get:
       tags:
@@ -40,6 +60,26 @@ paths:
       responses:
         '200':
           description: Created user successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericUser'
+  /api/generic-user:
+    post:
+      tags:
+        - User
+      summary: Get generic user
+      description: Retrieve generic users information.
+      operationId: getGenericUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+      responses:
+        '200':
+          description: User information
           content:
             application/json:
               schema:
@@ -587,6 +627,18 @@ components:
         testCaseInput:
           type: string
         testCaseOutput:
+          type: string
+    TokenEmailRequest:
+      type: object
+      required:
+        - token
+      properties:
+        token:
+          type: string
+    TokenEmailResponse:
+      type: object
+      properties:
+        email:
           type: string
   parameters:
     UserId:
