# target/generated-sources/api/api.ts
@@ -1,3 +1,5 @@
+export * from './authentication.service';
+import { AuthenticationService } from './authentication.service';
 export * from './deliverable.service';
 import { DeliverableService } from './deliverable.service';
 export * from './task.service';
@@ -6,4 +8,4 @@ export * from './user.service';
 import { UserService } from './user.service';
 export * from './userTask.service';
 import { UserTaskService } from './userTask.service';
-export const APIS = [DeliverableService, TaskService, UserService, UserTaskService];
+export const APIS = [AuthenticationService, DeliverableService, TaskService, UserService, UserTaskService];
